--- a/config/install/migrate.migration.d7_lesson.yml
+++ b/config/install/migrate.migration.d7_lesson.yml
@@ -22,6 +22,45 @@ process:
   sticky: sticky
   uuid: uuid
 
+# field_lesson_description
+  field_lesson_description.value: field_lesson_description_value
+  field_lesson_description.format: 
+      plugin: static_map
+    source: field_lesson_description_format
+    map:
+      filtered_html: restricted_html
+      full_html: full_html
+# field_lesson_draft_status
+#  field_lesson_draft_status: field_lesson_draft_status_value
+# field_lesson_drupal_version
+#  field_lesson_drupal_version: field_lesson_drupal_version_value
+# field_lesson_last_peer_review
+#  field_lesson_last_peer_review: field_lesson_last_peer_review_value
+# field_lesson_maintainers
+#  field_lesson_maintainers: field_lesson_maintainers_value
+# field_lesson_overview
+#  field_lesson_overview: field_lesson_overview_value
+# field_lesson_prerequisites
+#  field_lesson_prerequisites: field_lesson_prerequisites_value
+# field_lesson_project_name
+  field_lesson_project_name.value: field_lesson_project_name_value
+  field_lesson_project_name.format: 
+      plugin: static_map
+    source: field_lesson_project_name_format
+    map:
+      filtered_html: restricted_html
+      full_html: full_html
+# field_lesson_draft_status  
+# field_lesson_project_type
+#  field_lesson_project_type: field_lesson_project_type_value
+# field_lesson_steps
+#  field_lesson_steps: field_lesson_steps_value
+# field_lesson_tags
+#  field_lesson_tags: field_lesson_tags_value
+# field_lesson_type
+#  field_lesson_type: field_lesson_type_value
+
+
 #  unmapped d7 fields.
 #  tnid
 #  translate
@@ -36,3 +75,4 @@ process:
 #    - d6_field_instance_widget_settings
 #    - d6_field_formatter_settings
 #    - d6_node_settings
+
