--- a/config/install/migrate.migration.d7_lesson.yml
+++ b/config/install/migrate.migration.d7_lesson.yml
@@ -31,6 +31,7 @@ process:
       filtered_html: restricted_html
       full_html: full_html
   field_lesson_draft_status.value: field_lesson_draft_status_value
+  field_lesson_drupal_version.value: field_lesson_drupal_version_value
   field_lesson_project_name.value: field_lesson_project_name_value
   field_lesson_project_name.format:
     plugin: static_map
