added migration for field_lesson_last_peer_review

--- a/config/install/migrate.migration.d7_lesson.yml
+++ b/config/install/migrate.migration.d7_lesson.yml
@@ -32,6 +32,7 @@ process:
       full_html: full_html
   field_lesson_draft_status.value: field_lesson_draft_status_value
   field_lesson_drupal_version.value: field_lesson_drupal_version_value
+  field_lesson_last_peer_review.value: field_lesson_last_peer_review_value
   field_lesson_project_name.value: field_lesson_project_name_value
   field_lesson_project_name.format:
     plugin: static_map
