--- a/config/install/migrate.migration.d7_lesson.yml
+++ b/config/install/migrate.migration.d7_lesson.yml
@@ -29,6 +29,14 @@ process:
     source: field_lesson_description_format
     map:
       filtered_html: restricted_html
+      full_html: full_html  
+  field_lesson_overview.value: field_lesson_overview_value
+  field_lesson_overview.format:
+    plugin: static_map
+    bypass: true
+    source: field_lesson_overview_format
+    map:
+      filtered_html: restricted_html
       full_html: full_html
   field_lesson_draft_status.value: field_lesson_draft_status_value
   field_lesson_drupal_version.value: field_lesson_drupal_version_value
